# regionality

./: Makefile  README.md  SPEC.md  values.yaml
argocd/: cluster-configs-app.yaml
argocd/applications/: regional-access-cluster-ap-south.yaml  regional-access-cluster-eu-west.yaml  regional-access-cluster-us-east.yaml  regional-access-cluster-us-west.yaml  regional-cluster-ap-south.yaml  regional-cluster-eu-west.yaml  regional-cluster-us-east.yaml  regional-cluster-us-west.yaml
argocd/applicationsets/: cluster-configs.yaml
base/: configmap.yaml  kustomization.yaml
bootstrap/argocd/: app-of-apps.yaml
central-control-plane-applications/: central-control-plane-pipelines.application.yaml  cluster-configmaps.application.yaml  cluster-configs.application.yaml  pipeline.application.yaml
central-control-plane-charts/provision-application/: Chart.yaml
central-control-plane/cluster-configs/: Chart.yaml
central-control-plane/pipelines/: cluster-management.pipeline.yaml  default.rbac.yaml
cluster-configs/: values.yaml
cluster-configs/templates/: configmap.yaml
cluster-pipeline/: pipeline.yaml
clusters/base/: kustomization.yaml
configs/configmaps/: eu-west-1-cluster-01-config.yaml  us-east-1-cluster-03-config.yaml  us-east-1-cluster-04-config.yaml  us-east-2-cluster-02-config.yaml
pipelinerun-trigger/: Chart.yaml  values.yaml
pipelines/: cluster-management.pipeline.yaml
tekton-pipeline/: pipeline.yaml  post-task.yaml  pre-task.yaml  provision-task.yaml
tools/config-generator/: generate_configs.py  pyproject.toml  test_generate_configs.py
(+65 files in other folders)
